--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
 
       --rotSign: 1;
       --rot: 0deg;
-
-      --cornerText: #ead7be;
     }
 
     html, body { height: 100%; }
@@ -90,10 +88,25 @@
       width: 100%;
       display:flex;
       align-items: baseline;
-      justify-content: center;
+      justify-content: space-between;
+      gap: 12px;
       user-select:none;
       margin-bottom: 2px;
     }
+
+    .sideTitle{
+      flex: 1 1 0;
+      font-weight: 900;
+      letter-spacing: 0.03em;
+      font-size: clamp(14px, 2.5vmin, 20px);
+      color: rgba(0,0,0,0.92);
+      text-shadow:
+        0 1px 0 rgba(255,255,255,0.35),
+        0 10px 18px rgba(0,0,0,0.10);
+      white-space: nowrap;
+    }
+    .sideTitle.left{ text-align: left; padding-left: 6px; }
+    .sideTitle.right{ text-align: right; padding-right: 6px; }
 
     .titleMain{
       flex: 0 0 auto;
@@ -371,61 +384,20 @@
     .k-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
     .k-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* ===== Pfeil: PNG (Pfeil.png) – fest am Würfel, KEIN rotate/fade/move ===== */
+    /* ===== PFEIL (GENAU FIXIERT): SW-ECKE PNG == SW-ECKE 4B =====
+       Wichtig: Der Pfeil hängt IM wFaceGroup -> rotiert/mitwandert exakt mit der Würfelfläche.
+       KEIN JS. KEINE eigenen Rotationen. */
     .kippArrowPng{
       position:absolute;
-      left: 0;
-      top: 0;
-      z-index: 20;
-      pointer-events:none;
-      user-select:none;
-
-      width: calc(var(--step) * 3);
+      left: calc(1 * var(--step)); /* Spalte B */
+      top:  calc(4 * var(--step)); /* Unterkante Zeile 4 */
+      width: calc(3 * var(--step)); /* würfelflächen-groß */
       height: auto;
-
       transform-origin: 0 100%;
-      transform:
-        translate(var(--ax, 0px), var(--ay, 0px))
-        translateY(-100%);
-    }
-    /* W-Ansicht: Pfeil auf Würfelfläche (unten-links = 4B) */
-    .kippArrowPng.wArrow{
-      --ax: calc(1 * var(--step));
-      --ay: calc(4 * var(--step));
-    }
-    /* KIP-Ansicht: Pfeil auf rechter Würfelfläche (unten-links = 4E) */
-    .kippArrowPng.kArrow{
-      --ax: calc(4 * var(--step));
-      --ay: calc(4 * var(--step));
-    }
-
-    /* Corner-Text im Boxrahmen (1A–1B und 1G–1H) */
-    .cornerLabel{
-      position:absolute;
-      top: 0;
-      height: var(--step);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-weight: 900;
-      letter-spacing: 0.03em;
-      font-size: clamp(14px, 2.5vmin, 20px);
-      color: var(--cornerText);
-      text-shadow:
-        0 1px 0 rgba(0,0,0,0.55),
-        0 10px 18px rgba(0,0,0,0.25);
-      user-select:none;
-      z-index: 10;
+      transform: translateY(-100%); /* top=Unterkante, wir ziehen Bildhöhe hoch */
+      z-index: 6; /* unter Slots (7), über Holzfläche */
       pointer-events:none;
-      white-space: nowrap;
-    }
-    .cornerLabel.left{
-      left: 0;
-      width: calc(2 * var(--step));
-    }
-    .cornerLabel.right{
-      left: calc(6 * var(--step));
-      width: calc(2 * var(--step));
+      user-select:none;
     }
 
     .kippspeedBlock{
@@ -636,7 +608,9 @@
   <div class="stage">
 
     <div class="titleRow" aria-label="Titelzeile">
+      <div class="sideTitle left">KIPP color</div>
       <div class="titleMain"><h1>DigiKIPP</h1></div>
+      <div class="sideTitle right">KIPP color</div>
     </div>
 
     <div class="boxShell" id="boxShell" aria-label="BoxShell">
@@ -644,10 +618,6 @@
 
         <div class="floor" aria-hidden="true"></div>
         <div id="grid" class="grid" aria-label="8×8 Raster"></div>
-
-        <!-- Corner Texte im Boxrahmen -->
-        <div class="cornerLabel left">KIPP color</div>
-        <div class="cornerLabel right">KIPP color</div>
 
         <div id="wFaceGroup" class="wFaceGroup" aria-label="W Paket">
           <div class="cubeShadow" aria-hidden="true"></div>
@@ -658,8 +628,8 @@
           <div class="slot s-2c read-north" data-slot="S3"><div class="num"><span></span></div></div>
           <div class="slot s-2d read-north" data-slot="S4"><div class="num"><span></span></div></div>
 
-          <!-- Pfeil fest am Würfel (4B unten-links) -->
-          <img class="kippArrowPng wArrow" src="Pfeil.png" alt="Kipprichtung Pfeil" />
+          <!-- PFEIL: exakt SW-Ecke Pfeil.png == SW-Ecke 4B -->
+          <img class="kippArrowPng" src="Pfeil.png" alt="Kipprichtung Pfeil" />
         </div>
 
         <div id="kipGroup" class="kipGroup hidden" aria-label="KIP Gruppe">
@@ -679,9 +649,6 @@
             <div class="slot k-4e read-west"  data-slot="W1_2"><div class="num"><span></span></div></div>
             <div class="slot k-2f read-north" data-slot="W1_3"><div class="num"><span></span></div></div>
             <div class="slot k-2g read-north" data-slot="W1_4"><div class="num"><span></span></div></div>
-
-            <!-- Pfeil fest auf rechter KIP-Würfelfläche (4E unten-links) -->
-            <img class="kippArrowPng kArrow" src="Pfeil.png" alt="Kipprichtung Pfeil" />
           </div>
         </div>
 
