--- a/index.html
+++ b/index.html
@@ -43,6 +43,22 @@
 
       --rotSign: 1;
       --rot: 0deg;
+
+      --hud-rot: 0deg;
+      --hud-rot-neg: 0deg;
+
+      --sel-size: 0px;
+      --sel-y-bottom: 0px;
+
+      --sel1-x: 0px;
+      --sel2-x: 0px;
+      --sel3-x: 0px;
+      --sel4-x: 0px;
+      --sel5-x: 0px;
+      --sel6-x: 0px;
+
+      --label-x: 0px;
+      --label-y: 0px;
     }
 
     html, body { height: 100%; }
@@ -84,29 +100,15 @@
       align-items:center;
     }
 
+    /* ===== Titelzeile (nur DigiKIPP oben) ===== */
     .titleRow{
       width: 100%;
       display:flex;
       align-items: baseline;
-      justify-content: space-between;
-      gap: 12px;
+      justify-content: center;
       user-select:none;
       margin-bottom: 2px;
     }
-
-    .sideTitle{
-      flex: 1 1 0;
-      font-weight: 900;
-      letter-spacing: 0.03em;
-      font-size: clamp(14px, 2.5vmin, 20px);
-      color: rgba(0,0,0,0.92);
-      text-shadow:
-        0 1px 0 rgba(255,255,255,0.35),
-        0 10px 18px rgba(0,0,0,0.10);
-      white-space: nowrap;
-    }
-    .sideTitle.left{ text-align: left; padding-left: 6px; }
-    .sideTitle.right{ text-align: right; padding-right: 6px; }
 
     .titleMain{
       flex: 0 0 auto;
@@ -184,6 +186,35 @@
       box-shadow:
         inset 0 0 0 2px #000,
         0 0 0 1px rgba(0,0,0,0.25);
+    }
+
+    /* ===== KIPP color (in schwarzer Rahmen, Zeile 1 über AB / GH) ===== */
+    .kippColorOverlay{
+      position:absolute;
+      top: 0;
+      height: var(--step);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      color: var(--ui-text);
+      font-weight: 1000;
+      letter-spacing: 0.04em;
+      font-size: clamp(14px, 2.5vmin, 20px);
+      text-shadow:
+        0 1px 0 rgba(0,0,0,0.55),
+        0 6px 14px rgba(0,0,0,0.35);
+      z-index: 20;
+      pointer-events:none;
+      user-select:none;
+      white-space: nowrap;
+    }
+    .kippColorLeft{
+      left: 0;
+      width: calc(var(--step) * 2); /* A+B */
+    }
+    .kippColorRight{
+      right: 0;
+      width: calc(var(--step) * 2); /* G+H */
     }
 
     .floor{
@@ -384,21 +415,120 @@
     .k-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
     .k-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* ===== PFEIL: SW-ECKE PNG == SW-ECKE 4B, UND ABSOLUT OBERSTE EBENE ===== */
+    /* ===== Pfeil: PNG (Pfeil.png) – IMMER oberste Ebene ===== */
     .kippArrowPng{
       position:absolute;
-      left: calc(1 * var(--step)); /* Spalte B */
-      top:  calc(4 * var(--step)); /* Unterkante Zeile 4 */
-      width: calc(3 * var(--step)); /* würfelflächen-groß */
+      left: 0;
+      top: 0;
+      z-index: 6000;
+      pointer-events:none;
+      user-select:none;
+
+      width: calc(var(--step) * 3);
       height: auto;
 
       transform-origin: 0 100%;
-      transform: translateY(-100%);
-
-      z-index: 9999; /* höher als Slots/Zahlen */
-      pointer-events:none;
-      user-select:none;
+      transform:
+        translate(var(--arrow-x, 0px), var(--arrow-y, 0px))
+        translateY(-100%)
+        rotate(var(--arrow-rot, 0deg));
     }
+
+    /* ===== Auswahl-UI: bewegt sich mit Rotationsgruppe, bleibt aber typografisch waagrecht ===== */
+    .hudGroup{
+      position:absolute;
+      inset:0;
+      z-index: 5500;
+      pointer-events:none;
+
+      --pivot-x: calc(4 * var(--step));
+      --pivot-y: calc(4 * var(--step));
+
+      transform:
+        translate(var(--pivot-x), var(--pivot-y))
+        rotate(var(--hud-rot))
+        translate(calc(-1 * var(--pivot-x)), calc(-1 * var(--pivot-y)));
+      transform-origin: 0 0;
+    }
+
+    .hudUpright{
+      position:absolute;
+      inset:0;
+      transform:
+        translate(var(--pivot-x), var(--pivot-y))
+        rotate(var(--hud-rot-neg))
+        translate(calc(-1 * var(--pivot-x)), calc(-1 * var(--pivot-y)));
+      transform-origin: 0 0;
+      pointer-events:none;
+    }
+
+    .kippLabel{
+      position:absolute;
+      left: var(--label-x);
+      top:  var(--label-y);
+      color: var(--ui-text);
+      font-weight: 1000;
+      letter-spacing: 0.04em;
+      font-size: clamp(16px, 3.2vmin, 24px);
+      text-shadow:
+        0 1px 0 rgba(0,0,0,0.55),
+        0 10px 18px rgba(0,0,0,0.35);
+      white-space: nowrap;
+      user-select:none;
+      pointer-events:none;
+    }
+
+    .choiceRow{
+      position:absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events:none;
+    }
+
+    .choiceBtn{
+      position:absolute;
+      width: var(--sel-size);
+      height: var(--sel-size);
+      border-radius: 0px;
+      background: var(--btn-bg);
+      border: 1px solid rgba(0,0,0,0.55);
+      box-shadow:
+        0 16px 22px rgba(0,0,0,0.28),
+        0 8px 12px rgba(0,0,0,0.18),
+        inset 0 1px 0 rgba(255,255,255,0.35),
+        inset 0 -2px 0 rgba(0,0,0,0.10);
+      transform: translateY(calc(var(--sel-y-bottom) - var(--sel-size)));
+      pointer-events:auto; /* klickbar */
+      user-select:none;
+      -webkit-tap-highlight-color: transparent;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+    }
+
+    .choiceBtn:active{
+      filter: brightness(0.97);
+      transform:
+        translateY(calc(var(--sel-y-bottom) - var(--sel-size) + 1px))
+        scale(0.99);
+    }
+
+    .choiceBtn span{
+      font-weight: 1000;
+      font-size: clamp(18px, 4.0vmin, 28px);
+      color: #7a4a34; /* rostbraun */
+      text-shadow: 0 1px 0 rgba(255,255,255,0.25);
+      line-height: 1;
+    }
+
+    .c1{ left: var(--sel1-x); }
+    .c2{ left: var(--sel2-x); }
+    .c3{ left: var(--sel3-x); }
+    .c4{ left: var(--sel4-x); }
+    .c5{ left: var(--sel5-x); }
+    .c6{ left: var(--sel6-x); }
 
     .kippspeedBlock{
       width: 100%;
@@ -608,9 +738,7 @@
   <div class="stage">
 
     <div class="titleRow" aria-label="Titelzeile">
-      <div class="sideTitle left">KIPP color</div>
       <div class="titleMain"><h1>DigiKIPP</h1></div>
-      <div class="sideTitle right">KIPP color</div>
     </div>
 
     <div class="boxShell" id="boxShell" aria-label="BoxShell">
@@ -618,6 +746,10 @@
 
         <div class="floor" aria-hidden="true"></div>
         <div id="grid" class="grid" aria-label="8×8 Raster"></div>
+
+        <!-- KIPP color im schwarzen Rahmen (Zeile 1) -->
+        <div class="kippColorOverlay kippColorLeft">KIPP color</div>
+        <div class="kippColorOverlay kippColorRight">KIPP color</div>
 
         <div id="wFaceGroup" class="wFaceGroup" aria-label="W Paket">
           <div class="cubeShadow" aria-hidden="true"></div>
@@ -627,9 +759,6 @@
           <div class="slot s-4b read-west"  data-slot="S2"><div class="num"><span></span></div></div>
           <div class="slot s-2c read-north" data-slot="S3"><div class="num"><span></span></div></div>
           <div class="slot s-2d read-north" data-slot="S4"><div class="num"><span></span></div></div>
-
-          <!-- PFEIL: exakt SW-Ecke Pfeil.png == SW-Ecke 4B + oberste Ebene -->
-          <img class="kippArrowPng" src="Pfeil.png" alt="Kipprichtung Pfeil" />
         </div>
 
         <div id="kipGroup" class="kipGroup hidden" aria-label="KIP Gruppe">
@@ -653,6 +782,25 @@
         </div>
 
         <div class="ball" aria-label="Kugel"></div>
+
+        <!-- HUD Gruppe (Kippzahl + Auswahl 1..6) -->
+        <div id="hudGroup" class="hudGroup hidden" aria-label="HUD Gruppe">
+          <div class="hudUpright" id="hudUpright">
+            <div id="kippLabel" class="kippLabel">Kippzahl?</div>
+            <div class="choiceRow" aria-label="Auswahl 1..6">
+              <div class="choiceBtn c1" data-choice="1"><span>1</span></div>
+              <div class="choiceBtn c2" data-choice="2"><span>2</span></div>
+              <div class="choiceBtn c3" data-choice="3"><span>3</span></div>
+              <div class="choiceBtn c4" data-choice="4"><span>4</span></div>
+              <div class="choiceBtn c5" data-choice="5"><span>5</span></div>
+              <div class="choiceBtn c6" data-choice="6"><span>6</span></div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Pfeil: PNG aus Repo -->
+        <img id="kippArrowPng" class="kippArrowPng" src="Pfeil.png" alt="Kipprichtung Pfeil" />
+
       </div>
 
       <div class="kippspeedBlock" id="kippspeedBlock" aria-label="Kippspeed">
@@ -670,13 +818,13 @@
         <div style="display:flex; align-items:flex-end; gap: 12px;">
           <div class="uiLabel">Kippziel</div>
           <div class="targetCard">
-            <div class="targetSquare" aria-label="Ziel (Dummy)"><span>7</span></div>
-            <div class="progressText" aria-label="Progress (Dummy)">(00/11)</div>
+            <div class="targetSquare" aria-label="Ziel"><span id="targetValue">7</span></div>
+            <div class="progressText" aria-label="Progress" id="progressText">(00/11)</div>
           </div>
         </div>
 
-        <div class="pointsBlock" aria-label="Punkteblock rechts (Dummy)">
-          <div class="pointsNow">0p</div>
+        <div class="pointsBlock" aria-label="Punkteblock rechts">
+          <div class="pointsNow" id="pointsNow">0p</div>
           <div class="hiLine">Highscore: <span>66</span></div>
         </div>
       </div>
@@ -693,6 +841,12 @@
     const kipGroup  = document.getElementById("kipGroup");
     const btnStart  = document.getElementById("btnStart");
     const speedSlider = document.getElementById("speedSlider");
+    const arrowPng  = document.getElementById("kippArrowPng");
+
+    const hudGroup = document.getElementById("hudGroup");
+    const targetValueEl = document.getElementById("targetValue");
+    const progressTextEl = document.getElementById("progressText");
+    const pointsNowEl = document.getElementById("pointsNow");
 
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
@@ -712,7 +866,8 @@
       const v = Number(speedSlider.value || 3);
       const holdMsFull = Math.max(800, Math.round(3200 - v * 266));
       const holdMsKip  = Math.max(520, Math.round(2200 - v * 186));
-      return { holdMsFull, holdMsKip };
+      const stepMs     = Math.max(220, Math.round(520 - v * 24));
+      return { holdMsFull, holdMsKip, stepMs };
     }
 
     const cols = ["A","B","C","D","E","F","G","H"];
@@ -826,6 +981,10 @@
       const deg = rotDeg[rotIndex];
       wFace.style.setProperty("--rot", deg + "deg");
       kipGroup.style.setProperty("--rot", deg + "deg");
+
+      // HUD mitdrehen (Position folgt), Inhalt wieder waagrecht
+      hudGroup.style.setProperty("--hud-rot", deg + "deg");
+      hudGroup.style.setProperty("--hud-rot-neg", (-deg) + "deg");
     }
 
     function renderW(){
@@ -892,25 +1051,165 @@
 
       [...slotTargetsW, ...slotTargetsKipRight, ...slotTargetsKipLeft].forEach(s => { if(s) s.textContent=""; });
       setRotationSnap();
+      placeArrow();
+      layoutChoiceUI();
     }
 
     function advanceFullCW(){
       rotIndex  = (rotIndex + 1) % 4;
       faceIndex = (faceIndex + 1) % 3;
-      setRotationSnap();
+      placeArrow();
+      layoutChoiceUI();
     }
 
+    function getStepPx(){
+      return boardEl.getBoundingClientRect().width / 8;
+    }
+
+    // Pfeil: Linke untere Ecke von 4B (Anchor unten-links), rotiert mit rotIndex
+    function placeArrow(){
+      const step = getStepPx();
+      const x = step * 1; // Spalte B
+      const y = step * 4; // untere Kante Zeile 4
+      const deg = rotDeg[rotIndex];
+
+      arrowPng.style.setProperty("--arrow-x", x + "px");
+      arrowPng.style.setProperty("--arrow-y", y + "px");
+      arrowPng.style.setProperty("--arrow-rot", deg + "deg");
+    }
+
+    function showArrow(on){
+      arrowPng.style.display = on ? "block" : "none";
+    }
+
+    // Auswahl-UI Layout (unrotierte Grundposition: über dem Würfel)
+    // - Würfel liegt unrotiert bei (step, step) und ist 3*step groß.
+    // - Linie: nördliche Würfelkante (y=step) + 0.5*step nach oben => yLine = step - 0.5*step = 0.5*step
+    // - Quadrate: 0.75*step, Unterkante sitzt auf yLine
+    // - X: 6 Spalten im Innenraum (B..G) => centers bei step*(1.5..6.5)
+    function layoutChoiceUI(){
+      const step = getStepPx();
+      const size = step * 0.75;
+      const yLine = step * 0.5;
+
+      document.documentElement.style.setProperty("--sel-size", size + "px");
+      document.documentElement.style.setProperty("--sel-y-bottom", yLine + "px");
+
+      const innerLeft = step * 1; // B
+      for(let i=0;i<6;i++){
+        const cx = innerLeft + (i + 0.5) * step;
+        const lx = cx - size/2;
+        document.documentElement.style.setProperty(`--sel${i+1}-x`, lx + "px");
+      }
+
+      // Label Standard: linksbündig über Quadrat 1
+      const sel1x = (innerLeft + (0 + 0.5) * step) - size/2;
+      let labelX = sel1x;
+      let labelY = (yLine - size) - (step * 0.65); // etwas drüber
+
+      // Spezialfall "Q0": Start weiter rechts (halbes Quadrat 4)
+      // (hier rotIndex==0 als Q0; wenn du Q0 anders meinst, sag mir nur die rotIndex-Nummer)
+      if(rotIndex === 0){
+        const sel4x = (innerLeft + (3 + 0.5) * step) - size/2;
+        labelX = sel4x + size * 0.5;
+      }
+
+      document.documentElement.style.setProperty("--label-x", labelX + "px");
+      document.documentElement.style.setProperty("--label-y", labelY + "px");
+    }
+
+    function showChoiceUI(on){
+      if(on){
+        hudGroup.classList.remove("hidden");
+      }else{
+        hudGroup.classList.add("hidden");
+      }
+    }
+
+    // ===== Minimaler Spielablauf (Layout + Klicks) =====
     let running = false;
+    let readyForChoice = false;
+
+    let points = 0;
+    let progressA = 0; // 00
+    const progressB = 11;
+
+    function setProgress(){
+      const a = String(progressA).padStart(2,"0");
+      const b = String(progressB).padStart(2,"0");
+      progressTextEl.textContent = `(${a}/${b})`;
+    }
+
+    function newTarget(){
+      const t = getUniqueRandomNumbers(1,1,12)[0];
+      targetValueEl.textContent = String(t);
+    }
+
+    function showPrompt(){
+      readyForChoice = true;
+      showChoiceUI(true);
+      showArrow(true);
+    }
+
+    function hidePrompt(){
+      readyForChoice = false;
+      showChoiceUI(false);
+      showArrow(false);
+    }
+
+    async function animateKipSteps(n){
+      const { holdMsKip, stepMs } = getTiming();
+      // kurze Kip-Animation n Schritte (Demo-Mechanik)
+      for(let i=0;i<n;i++){
+        showKip();
+        renderKip();
+        await sleep(Math.min(holdMsKip, 520));
+        advanceFullCW();
+        showW();
+        renderW();
+        await sleep(stepMs);
+      }
+    }
+
+    async function onChoose(n){
+      if(!readyForChoice || running) return;
+      running = true;
+      hidePrompt();
+
+      await animateKipSteps(n);
+
+      // Demo-Scoring: jeder Klick = +6 (du willst später Logik fürs "Treffer/Verkipp")
+      points += 6;
+      pointsNowEl.textContent = points + "p";
+
+      // nächste Runde: neuer Pfeil + Kippzahl? + Auswahl
+      progressA = Math.min(progressB, progressA + 1);
+      setProgress();
+      newTarget();
+      showPrompt();
+
+      running = false;
+    }
+
+    document.querySelectorAll(".choiceBtn").forEach(btn=>{
+      btn.addEventListener("click", (e)=>{
+        const n = Number(btn.dataset.choice);
+        onChoose(n);
+      });
+    });
 
     async function runShow7(){
       if(running) return;
       running = true;
       btnStart.disabled = true;
 
+      hidePrompt();
+
       const { holdMsFull, holdMsKip } = getTiming();
       const halfFull = Math.round(holdMsFull / 2);
 
       reroll12_keepEmpty();
+      showArrow(false);
 
       showW();
       renderWEmpty();
@@ -956,6 +1255,12 @@
 
       btnStart.textContent = "ZAHLEN NEU SETZEN";
       btnStart.disabled = false;
+
+      // Jetzt Spieler dran: Pfeil + Kippzahl? + Auswahl 1..6
+      newTarget();
+      layoutChoiceUI();
+      showPrompt();
+
       running = false;
     }
 
@@ -975,6 +1280,12 @@
       reroll12_keepEmpty();
       showW();
       renderWEmpty();
+
+      // Startzustand: kein Pfeil, keine Auswahl
+      hidePrompt();
+      showArrow(false);
+      setProgress();
+      layoutChoiceUI();
     });
 
     window.addEventListener("resize", () => {
@@ -983,6 +1294,9 @@
 
       setKippspeedStripHeight();
       requestAnimationFrame(setKippspeedStripHeight);
+
+      placeArrow();
+      layoutChoiceUI();
     });
   </script>
 </body>
