--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       --box-border: 4px;
       --box-radius: 0px;
 
-      --btn-bg: #ead7be;
+      --btn-bg: #ead7be;     /* dein Beige */
       --btn-text: #2a160c;
       --btn-border: rgba(0,0,0,0.35);
 
@@ -54,6 +54,7 @@
       margin:0;
       display:flex;
       justify-content:center;
+      align-items:flex-start;
       background:
         radial-gradient(ellipse at center, rgba(0,0,0,0.00) 40%, rgba(0,0,0,0.38) 100%),
         linear-gradient(180deg, rgba(0,0,0,0.20), rgba(0,0,0,0.00) 18%, rgba(0,0,0,0.00) 82%, rgba(0,0,0,0.22)),
@@ -78,7 +79,7 @@
 
     .stage{
       width: min(94vw, 680px);
-      margin-top: 4vh;
+      margin-top: clamp(10px, 2.2vh, 18px); /* vernünftiger Nord-Abstand */
       padding-bottom: 2vh;
       display:flex;
       flex-direction: column;
@@ -87,53 +88,13 @@
       align-items:center;
     }
 
-    .titleRow{
-      width: 100%;
-      display:flex;
-      align-items: baseline;
-      justify-content: space-between;
-      gap: 12px;
-      user-select:none;
-      margin-bottom: 2px;
-    }
-
-    .sideTitle{
-      flex: 1 1 0;
-      font-weight: 900;
-      letter-spacing: 0.03em;
-      font-size: clamp(14px, 2.5vmin, 20px);
-      color: rgba(0,0,0,0.92);
-      text-shadow:
-        0 1px 0 rgba(255,255,255,0.35),
-        0 10px 18px rgba(0,0,0,0.10);
-      white-space: nowrap;
-    }
-    .sideTitle.left{ text-align: left; padding-left: 6px; }
-    .sideTitle.right{ text-align: right; padding-right: 6px; }
-
-    .titleMain{
-      flex: 0 0 auto;
-      display:flex;
-      justify-content:center;
-      align-items: baseline;
-    }
-    .titleMain h1{
-      margin: 0;
-      padding: 0;
-      font-weight: 1000;
-      letter-spacing: 0.06em;
-      font-size: clamp(26px, 6.4vmin, 46px);
-      color: rgba(0,0,0,0.92);
-      text-shadow:
-        0 1px 0 rgba(255,255,255,0.35),
-        0 10px 18px rgba(0,0,0,0.25);
-      line-height: 1;
-    }
-
     .boxShell{
       width: 100%;
       box-sizing: border-box;
-      background: var(--box-black);
+
+      /* WICHTIG: nicht mehr schwarz, sonst sieht man den "gelöschten Streifen" nicht */
+      background: transparent;
+
       border: var(--box-border) solid var(--box-black);
       border-radius: var(--box-radius);
       box-shadow:
@@ -225,6 +186,24 @@
       box-shadow: 0 3px 6px rgba(0,0,0,0.28);
       z-index: 3;
       pointer-events: none;
+    }
+
+    /* ===== KIP color Labels in Rasterzeile 1 (oben) ===== */
+    .kippColorLabel{
+      position:absolute;
+      z-index: 6500;
+      color: var(--btn-bg);
+      font-weight: 1000;
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
+      font-size: clamp(12px, 2.4vmin, 16px);
+      text-shadow:
+        0 2px 0 rgba(0,0,0,0.35),
+        0 10px 18px rgba(0,0,0,0.35);
+      user-select:none;
+      white-space: nowrap;
+      transform: translate(-50%, -50%);
+      pointer-events:none;
     }
 
     .wFaceGroup,
@@ -392,17 +371,14 @@
       position:absolute;
       left: 0;
       top: 0;
-      z-index: 9000; /* IMMER oberste Ebene */
+      z-index: 9000;
       pointer-events:none;
       user-select:none;
 
-      /* Pfeil.png ist "würfelflächen-groß" => 3 Rasterzellen */
       width: calc(var(--step) * 3);
       height: auto;
 
-      /* Anchor: unten-links */
       transform-origin: 0 100%;
-
       transform:
         translate(var(--arrow-x, 0px), var(--arrow-y, 0px))
         translateY(-100%)
@@ -458,7 +434,7 @@
     .choiceBtn span{
       font-weight: 1000;
       font-size: clamp(16px, 4.2vmin, 26px);
-      color: #7a3f2b; /* rostbraun */
+      color: #7a3f2b;
       text-shadow: 0 1px 0 rgba(255,255,255,0.35);
       line-height: 1;
     }
@@ -466,6 +442,13 @@
     .choiceBtn:active{
       transform: scale(0.985);
       filter: brightness(0.98);
+    }
+
+    /* ===== Trennstreifen: halbe Rasterzeile, transparent ===== */
+    .kippSeparator{
+      width: 100%;
+      height: 0px;           /* wird per JS auf step/2 gesetzt */
+      background: transparent;
     }
 
     .kippspeedBlock{
@@ -675,17 +658,15 @@
 <body>
   <div class="stage">
 
-    <div class="titleRow" aria-label="Titelzeile">
-      <div class="sideTitle left">KIPP color</div>
-      <div class="titleMain"><h1>DigiKIPP</h1></div>
-      <div class="sideTitle right">KIPP color</div>
-    </div>
-
     <div class="boxShell" id="boxShell" aria-label="BoxShell">
       <div class="board" id="board">
 
         <div class="floor" aria-hidden="true"></div>
         <div id="grid" class="grid" aria-label="8×8 Raster"></div>
+
+        <!-- KIP color Labels (Rasterzeile 1, AB und GH) -->
+        <div id="kippColorLeft" class="kippColorLabel">KIP color</div>
+        <div id="kippColorRight" class="kippColorLabel">KIP color</div>
 
         <div id="wFaceGroup" class="wFaceGroup" aria-label="W Paket">
           <div class="cubeShadow" aria-hidden="true"></div>
@@ -738,6 +719,9 @@
 
       </div>
 
+      <!-- Trennstreifen: halbe Rasterzeile (step/2) -->
+      <div id="kippSeparator" class="kippSeparator" aria-hidden="true"></div>
+
       <div class="kippspeedBlock" id="kippspeedBlock" aria-label="Kippspeed">
         <div class="kippspeedLabel">KIPPSPEED</div>
         <div class="sliderRow">
@@ -780,6 +764,10 @@
     const arrowPng  = document.getElementById("kippArrowPng");
     const hudGroup  = document.getElementById("hudGroup");
     const kippLabel = document.getElementById("kippLabel");
+
+    const kippColorLeft  = document.getElementById("kippColorLeft");
+    const kippColorRight = document.getElementById("kippColorRight");
+    const kippSeparator  = document.getElementById("kippSeparator");
 
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
@@ -979,16 +967,39 @@
       return { cx: step * 4, cy: step * 4, step };
     }
 
-    // ===== Pfeil: nur am Anfang (Q0/W1) und am Ende (Q3/Spieler dran) =====
+    /* ===== KIP color in Rasterzeile 1: über AB und GH zentriert ===== */
+    function layoutKipColorLabels(){
+      const step = getStepPx();
+
+      // Zentren über AB und GH:
+      const xLeft  = step * 1;  // Mitte über A+B
+      const xRight = step * 7;  // Mitte über G+H
+
+      // In Zeile 1 -> wir setzen es in die obere Hälfte dieser Zeile
+      const y = step * 0.35;
+
+      kippColorLeft.style.left  = xLeft + "px";
+      kippColorLeft.style.top   = y + "px";
+
+      kippColorRight.style.left = xRight + "px";
+      kippColorRight.style.top  = y + "px";
+    }
+
+    /* ===== Separator: halbe Rasterzeile ===== */
+    function setSeparatorHeight(){
+      const step = getStepPx();
+      const h = Math.round(step / 2);
+      kippSeparator.style.height = h + "px";
+    }
+
+    // ===== Pfeil: nur am Anfang und am Ende =====
     function placeArrow(){
       const { cx, cy, step } = getPivot();
       const deg = rotDeg[rotIndex];
 
-      // Basis-Ankerpunkt: linke untere Ecke von 4B (unrotierte Koordinaten)
       const baseX = step * 1; // Spalte B
       const baseY = step * 4; // untere Kante Zeile 4
 
-      // Punkt um Boxmittelpunkt mitrotieren
       const p = rotatePoint(baseX, baseY, cx, cy, deg);
 
       arrowPng.style.setProperty("--arrow-x", p.x + "px");
@@ -1004,27 +1015,22 @@
       arrowPng.classList.add("hidden");
     }
 
-    // ===== HUD: Kippzahl + 1..6 (nur wenn Spieler dran ist) =====
+    // ===== HUD: Kippzahl + 1..6 =====
     function layoutChoiceUI(){
       const { cx, cy, step } = getPivot();
       const deg = rotDeg[rotIndex];
 
-      // 75% eines Rasterquadrats
       const size = step * 0.75;
       document.documentElement.style.setProperty("--sel-size", size + "px");
 
-      // Linie: 1/2 Rasterhöhe ÜBER der nördlichen Würfelkante
-      // Würfel unrotiert: top = 1*step, Nordkante = step
-      // Linie = step - 0.5*step = 0.5*step
       const yLine = step * 0.5;
 
-      // 6 Zentren B..G: 1.5..6.5
       for(let i=0;i<6;i++){
-        const base = { x: step * (1.5 + i), y: yLine };  // y ist Unterkante-Linie
+        const base = { x: step * (1.5 + i), y: yLine };
         const p = rotatePoint(base.x, base.y, cx, cy, deg);
 
         const left = p.x - size/2;
-        const top  = p.y - size; // Unterkante sitzt auf yLine
+        const top  = p.y - size;
 
         const el = hudGroup.querySelector(`.choiceBtn[data-choice="${i+1}"]`);
         if(el){
@@ -1034,7 +1040,6 @@
         }
       }
 
-      // Label: linksbündig über Quadrat 1
       const labelX = step * 1.5 - (size/2);
       const labelY = (yLine - size) - (step * 0.65);
       const lp = rotatePoint(labelX, labelY, cx, cy, deg);
@@ -1069,7 +1074,6 @@
       [...slotTargetsW, ...slotTargetsKipRight, ...slotTargetsKipLeft].forEach(s => { if(s) s.textContent=""; });
       setRotationSnap();
 
-      // Startzustand: Pfeil nur am Anfang sichtbar, HUD aus
       hideChoiceHUD();
       showArrow();
     }
@@ -1092,25 +1096,21 @@
 
       reroll12_keepEmpty();
 
-      // START: W1/Q0 zeigen, Pfeil sichtbar, HUD aus
       showW();
       renderWEmpty();
       showArrow();
       hideChoiceHUD();
       await sleep(halfFull);
 
-      // W1 Zahlen rein
       ensureAssigned(0);
       renderW();
       await sleep(halfFull);
 
-      // kip: Pfeil weg
       hideArrow();
       showKip();
       renderKip();
       await sleep(holdMsKip);
 
-      // weiter
       advanceFullCW();
       showW();
       renderWEmpty();
@@ -1139,12 +1139,10 @@
       renderKip();
       await sleep(holdMsKip);
 
-      // ENDE: Q3 angekommen -> Spieler dran:
       advanceFullCW();
       showW();
       renderW();
 
-      // Pfeil + HUD EIN (Spieler dran)
       showArrow();
       showChoiceHUD();
 
@@ -1153,27 +1151,28 @@
       running = false;
     }
 
-    // Klick auf Auswahl (nur Demo: loggt den Wert)
     hudGroup.addEventListener("click", (e) => {
       const btn = e.target.closest(".choiceBtn");
       if(!btn) return;
       const val = Number(btn.dataset.choice);
-      // Hier kommt später dein echter Spielablauf rein
       console.log("Kippwahl:", val);
     });
 
     btnStart.addEventListener("click", runShow7);
 
-    window.addEventListener("load", () => {
+    function relayoutAll(){
       setBoardSquare();
-      requestAnimationFrame(setBoardSquare);
-      setTimeout(setBoardSquare, 80);
-
-      buildGridOnce();
-
       setKippspeedStripHeight();
-      requestAnimationFrame(setKippspeedStripHeight);
-      setTimeout(setKippspeedStripHeight, 80);
+      setSeparatorHeight();
+      layoutKipColorLabels();
+
+      if(!arrowPng.classList.contains("hidden")) placeArrow();
+      if(!hudGroup.classList.contains("hidden")) layoutChoiceUI();
+    }
+
+    window.addEventListener("load", () => {
+      buildGridOnce();
+      relayoutAll();
 
       reroll12_keepEmpty();
       showW();
@@ -1181,15 +1180,7 @@
     });
 
     window.addEventListener("resize", () => {
-      setBoardSquare();
-      requestAnimationFrame(setBoardSquare);
-
-      setKippspeedStripHeight();
-      requestAnimationFrame(setKippspeedStripHeight);
-
-      // Wenn sichtbar, neu layouten
-      if(!arrowPng.classList.contains("hidden")) placeArrow();
-      if(!hudGroup.classList.contains("hidden")) layoutChoiceUI();
+      relayoutAll();
     });
   </script>
 </body>
